--- a/scr.css
+++ b/scr.css
@@ -34,6 +34,26 @@
     transition: all 0.5s;
 
 }
+#i4{
+    height: 35px;
+    width: 200px;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    margin-left: 75px;
+    background-color: bisque;
+    transition: all 0.5s;
+
+}
+#i5{
+    height: 35px;
+    width: 200px;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    margin-left: 75px;
+    background-color: bisque;
+    transition: all 0.5s;
+
+}
 #s{
     height: 35px;
     width: 200px;
@@ -67,9 +87,17 @@ h1{
     height:40px;
     width: 215px;
 }
+#i4:hover{
+    height:40px;
+    width: 215px;
+}
+#i5:hover{
+    height:40px;
+    width: 215px;
+}
 h2{
     background-color: aliceblue;
-    font-size: 35px ;
+    font-size: 25px ;
     margin-left:70px ;
 }
 #i3{
